--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,4 +1,10 @@
+*{
+    font-size: 20px;
+}
 div{
     background: red;
     color:white;
+    text-align: center;
+    font-size : 36px;
+    font-weight: 800;
 }
