--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding:15px;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +18,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap:10px;
 }
 
 a {
