flex exercice 5, add div "main" div for header + text + button, add another div only for continue and cancel button, move close button out of "main" div Css : display flex + padding to .modal, flex settings for the new .main , add flex shrink to icon, size and weight to .header, align self to close button, display flex and gap for bottom button

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,12 +16,21 @@ body {
 }
 
 .modal {
+  display: flex;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding:15px;
 }
-
+.main{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex:auto;
+  gap:15px;
+  margin: auto 15px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,8 +42,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
-
+.header{
+  flex:1;
+ font-size: 18px;
+ font-weight: 800;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -48,8 +62,12 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  align-self: flex-start;
 }
-
+.button {
+  display: flex;
+  gap: 5px;
+}
 button {
   cursor: pointer;
   padding: 8px 16px;
