--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,12 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-body {
-  height: 100vh;
+*{
+  list-style-type: none;
+  text-decoration: none;
   margin: 0;
+  padding:0;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   overflow: hidden;
   font-family: Roboto, sans-serif;
 }
-
+.header,
+.footer{
+  position: static;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+}
+.header{
+  margin: 30px;
+}
+.footer{
+  padding:10px 30px 10px 30px;
+  background-color: rgba(211, 211, 211, 0.911);
+}
+.left-links,
+.right-links{
+  display: flex;
+  gap:20px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:auto;
+  gap:10px;
+}
 img {
   width: 600px;
 }
@@ -15,7 +47,8 @@ button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
-  background: #eee;
+  background: #ddd;
+  padding: 10px;
 }
 
 input {
@@ -23,4 +56,7 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+a{
+  color:grey;
 }
