--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,66 @@
+*{
+  text-decoration: none;
+  list-style-type: none;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 800;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
-
+#main{
+display: flex;
+flex-wrap: row;
+flex: 1;
+}
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  font-size: 20px;
+  flex-shrink: 0;
+}
+a, a:visited{
+  color:white
 }
 
+
 .card {
+  width: 280px;
+  height: 300px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin:5px;
+  padding:18px;
+  flex:1 0 auto;
+}
+
+#cards-container{
+  display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ padding:50px;
 }
