--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap:5px;
   text-align: center;
 }
 
@@ -17,6 +20,10 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/ 3;
+  display:grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
 }
 
 .menu ul,
@@ -26,6 +33,9 @@
 
 .sidebar {
   background-color: #C50208;
+  display:grid;
+  gap:50px;
+  grid-row: 2/4;
 }
 
 .sidebar .photo {
@@ -46,6 +56,8 @@
 
 .nav {
   background-color: #C50208;
+  grid-row: 2;
+  grid-column: 2;
 }
 
 .nav ul li {
@@ -55,6 +67,11 @@
 
 .article {
   background-color: #bccbde;
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap:15px;
+  grid-row: 3;
+  grid-column: 2;
 }
 
 .article p {
@@ -68,6 +85,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,9 +101,25 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+.menu ul{
+  list-style-type: none;
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+}
+.logo{
+  justify-self: start;
 }
